--- a/source/_posts/timeline/2020-12-21 hexo-next7食用方法.md
+++ b/source/_posts/timeline/2020-12-21 hexo-next7食用方法.md
@@ -2,7 +2,7 @@
 title: hexo-next7食用方法 # 主题
 date: 2020-12-21 00:00:00 # 时间
 tags: # 标签
- - tools
+ - Tools
 urlname: use-hexo-next7
 categories:  website
 copyright: false
