--- a/source/_posts/timeline/2021-01-05-1 域名的使用.md
+++ b/source/_posts/timeline/2021-01-05-1 域名的使用.md
@@ -33,7 +33,8 @@ whois查询：https://domain.163yun.com/
 ICANN更多信息：https://www.icann.org/news/announcement-2018-05-22-zh
 
 # 域名跳转指定url方案
-> 2022-08-08 更新，现在可以使用cloudflare的workers进行301跳转
+> 2022-08-08 更新，现在可以使用 cloudflare 的 [workers]() 进行显示url跳转
+
 
 ## 方案一：github仓库跳转  
 准备：一个github账号，一个域名  
