--- a/source/_posts/timeline/2021-01-06 图床搭建.md
+++ b/source/_posts/timeline/2021-01-06 图床搭建.md
@@ -4,7 +4,7 @@ copyright: true
 date: 2021-01-06 00:00:01
 urlname: img-make
 tags: 
-- object store
+- Object Storage
 categories: website
 ---
 需要准备对象存储及域名，理论"永久链"图床，可在各云服务商或个人服务器间迁移数据  
@@ -12,7 +12,7 @@ categories: website
 <!-- more -->  
 
 # namesilo配置(国内备案域名可跳过此步骤)
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/281BCA8978E663D1AA05423137C07932E35E89FDDDCA7A23445455A7723F219C.png)
+![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/281BCA8978E663D1AA05423137C07932E35E89FDDDCA7A23445455A7723F219C.png)
 
 进入域名管理页面  
 将原有三个dns删除替换为以下内容，提交
@@ -24,18 +24,18 @@ categories: website
 # dnspod配置
 进入dnspod管理页面，添加你的域名，点击dns刷新  
 创建公有读私有写存储桶，并复制存储桶域名  
-![添加自定义源站域名](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/5C3AE90E330110085424836989AC2F904D961280A441B32B909654094DCFE2B2.png)
+![添加自定义源站域名](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/5C3AE90E330110085424836989AC2F904D961280A441B32B909654094DCFE2B2.png)
 到dnspod解析页面，添加CNAME解析  
 需要注意的是，namesilo的dns可能需要等几十分钟才会刷新，在此之前访问域名可能是到达不了存储桶的  
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/E315A71C14F3F94218BC781296F5F37A1B1996BCEF1D797ECA20A64597AFD18F.png)
+![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/E315A71C14F3F94218BC781296F5F37A1B1996BCEF1D797ECA20A64597AFD18F.png)
 
 # ssl证书以及防盗链设置
 在dnspod或者腾讯云域名注册界面申请免费ssl证书并下载，解压。在存储桶域名绑定页面进行证书绑定，用记事本打开Nginx里的文本并复制到对应区域
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/6B12C37D45ECE58C98F26DA67CDFC60F73ADB472ECBD37D20EFC839F64BD4A39.png)
+![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/6B12C37D45ECE58C98F26DA67CDFC60F73ADB472ECBD37D20EFC839F64BD4A39.png)
 
 测试一下，不挂t的情况下自定义域名可以访问图片，以后的迁移只需copy文件，域名重新对应一下CNAME即可，markdown文章的图片地址不需要变动。
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/4DEED59F8DC599B65736DFA4B81C4DB1C4028557408CFBA90B1691DDDE70D6EB.png)
+![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/4DEED59F8DC599B65736DFA4B81C4DB1C4028557408CFBA90B1691DDDE70D6EB.png)
 
 存储桶防盗链设置如下，配置完防盗链之后本地预览和网页地址栏输入是访问不了对象存储的，只有白名单内的ip才能访问  
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/358EF065F5956500257330DDE1493957881F0BD1C0294CB5E6115CDF7805CE40.png)
+![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/358EF065F5956500257330DDE1493957881F0BD1C0294CB5E6115CDF7805CE40.png)
 
