--- a/source/_posts/timeline/2022-09-04 显示url跳转.md
+++ b/source/_posts/timeline/2022-09-04 显示url跳转.md
@@ -1,9 +1,9 @@
 ---
-title: 显示url跳转，直播间专属链接 # 主题
+title: Cloudflare 301跳转 # 主题
 date: 2022-09-04 00:00:00 # 时间
 tags: # 标签
  - Tools
-urlname: cloudflare-skip-url
+urlname: cloudflare-301-url
 categories:  website
 copyright: true
 ---
@@ -50,8 +50,8 @@ dnspod官网：https://www.dnspod.cn/
 
 ```JavaScript
 const rules = [
-{"oldurl":"live.flowerdream.top","newurl":"live.bilibili.com/207640"},//哔哩哔哩直播间
-{"oldurl":"bilibili.flowerdream.top","newurl":"space.bilibili.com/6086741/"},//哔哩哔哩空间
+{"oldurl":"short-test.newreport.top","newurl":"newreport.top/2022-09-04/cloudflare-301-url"},
+
 ];
 
 async function handleRequest(request) {
@@ -66,3 +66,4 @@ addEventListener('fetch', async event => {
   event.respondWith(handleRequest(event.request))
 });
 ```
+> 验证 https://short-test.newreport.top
