--- a/source/_posts/timeline/2022-09-04 301跳转.md
+++ b/source/_posts/timeline/2022-09-04 301跳转.md
@@ -55,15 +55,25 @@ const rules = [
 ];
 
 async function handleRequest(request) {
-  var url = request.url;
-  for (var i = 0, l = rules.length; i < l; i++) {
-    url = url.replace(rules[i].oldurl, rules[i].newurl);
-    url = url.replace(/([\w\W]+)\/$/,"$1");//删除最后一个/
-  }
-  return Response.redirect(new URL(url), 301);
+    let url = request.url;
+    let hostname = new URL(request.url).hostname;
+    let isExist = false;
+    for (var i = 0, l = rules.length; i < l; i++) {
+        if (rules[i].oldurl == hostname) {
+            url = url.replace(rules[i].oldurl, rules[i].newurl);
+            isExist = true;
+            // url = url.replace(/([\w\W]+)\/$/,"$1");//删除最后一个/
+            break;
+        }
+    }
+    if (isExist) {
+        return Response.redirect(new URL(url), 301);
+    }
+    return fetch(request)
 }
+
 addEventListener('fetch', async event => {
-  event.respondWith(handleRequest(event.request))
+    event.respondWith(handleRequest(event.request))
 });
 ```
 > 验证 https://short-test.newreport.top
