--- a/source/_posts/timeline/2022-09-04 301跳转.md
+++ b/source/_posts/timeline/2022-09-04 301跳转.md
@@ -36,16 +36,14 @@ dnspod官网：https://www.dnspod.cn/
 ## namesilo修改ns服务器
 > https://www.namesilo.com/account_domains.php
 
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/B5DDEDA418F36157C835DA235BA775A9AC354B93EE763D05C05F83CADC9A77D5.png)
+![选择域名](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/B5DDEDA418F36157C835DA235BA775A9AC354B93EE763D05C05F83CADC9A77D5.png)
 
 
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/9FDF844D910F637DEB6C82647EC4E10E232B109A22E974EBEC582E07597BB683.png)
+![修改NameServer](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/9FDF844D910F637DEB6C82647EC4E10E232B109A22E974EBEC582E07597BB683.png)
 
 # 添加DNS解析和Workers
 
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/36C2EE20809A34E19037B12D9B2971DB4EF122F94257EDDE75CB0B5D11D98360.png)
-
-![](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/3F56F1DF013E32CF757E9E5CA95085FFA826168441F5969D356CD5D8834E13D4.png)
+![编辑Workers](https://gd-obj-001.gd2.qingstor.com/haruki/blog/cn/2022/36C2EE20809A34E19037B12D9B2971DB4EF122F94257EDDE75CB0B5D11D98360.png)
 
 
 ```JavaScript
