--- a/source/_posts/linux/rhel8/2021-01-01 01、Linux的简介和安装.md
+++ b/source/_posts/linux/rhel8/2021-01-01 01、Linux的简介和安装.md
@@ -5,9 +5,7 @@ date: 2021-01-01 00:00:00
 urlname: linux-introduction-and-installation
 categories:
 - linux
-- rhel8
-tags: 
-- Linux
+- rhel8手册
 ---
 # 学习目标  
 - Linux系统和红帽认证的基本介绍
