--- a/source/_posts/linux/rhel8/2021-01-02 02、Linux的基本使用.md
+++ b/source/_posts/linux/rhel8/2021-01-02 02、Linux的基本使用.md
@@ -5,9 +5,7 @@ date: 2021-01-02 00:00:00
 urlname: linux-basic-use
 categories:
 - linux
-- rhel8
-tags: 
-- Linux
+- rhel8手册
 ---
 # 学习目标  
 - 登录Red Hat Enterprise Linux系统
