--- a/source/_posts/linux/rhel8/2021-01-03 03、运行命令和获取帮助.md
+++ b/source/_posts/linux/rhel8/2021-01-03 03、运行命令和获取帮助.md
@@ -5,9 +5,7 @@ date: 2021-01-03 00:00:00
 urlname: run-commands-and-get-help
 categories:
 - linux
-- rhel8
-tags: 
-- Linux
+- rhel8手册
 ---
 # 学习目标  
 - 在提示符下执行命令
