--- a/source/_posts/linux/rhel8/2021-01-04 04、了解文件系统的和基本操作.md
+++ b/source/_posts/linux/rhel8/2021-01-04 04、了解文件系统的和基本操作.md
@@ -5,9 +5,7 @@ date: 2021-01-04 00:00:00
 urlname: understand-the-file-system-and-basic-operations
 categories:
 - linux
-- rhel8
-tags: 
-- Linux
+- rhel8手册
 ---
 # 学习目标  
 - 描述分件系统重要的组成部分
