--- a/source/_posts/python/python3/2021-06-23 03、列表简介.md
+++ b/source/_posts/python/python3/2021-06-23 03、列表简介.md
@@ -5,11 +5,13 @@ date: 2021-06-23 00:00:00
 urlname: list-introduction
 categories: 
 - python
+- python3手册
 ---
 # 列表是什么
 类似于c的数组
-
+```bash
 vim 19.py
+```
 ```python
 bicycles = ['trek','cannondale','redline','specialized']
 print(bicycles)
@@ -20,7 +22,9 @@ print(bicycles)
 <!-- more -->  
 
 ## 访问列表元素
+```bash
 vim 21.py
+```
 ```python
 bicycles = ['trek','cannondale','redline','specialized']
 print(bicycles[0])
@@ -32,7 +36,9 @@ Trek
 ```
 
 ## 索引从0而不是1开始
+```bash
 vim 22.py
+```
 ```python
 bicycles = ['trek','cannondale','redline','specialized']
 print(bicycles[1])      #访问第二个元素
@@ -46,7 +52,9 @@ specialized
 ```
 
 ## 使用列表中的各个值
+```bash
 vim 23.py
+```
 ```python
 bicycles = ['trek','cannondale','redline','specialized']
 message = "My first bicycle was a " + bicycles[1].title() + "."
@@ -60,7 +68,9 @@ My first bicycle was a Cannondale.
 大多数列表都是动态的，列表创建后，会随着程序的运行而增删元素。
 
 ## 修改列表元素
+```bash
 vim 24.py
+```
 ```python
 motorcycles = ['honda','yamaha','suzukli']
 print(motorcycles)
@@ -75,8 +85,9 @@ print(motorcycles)
 ## 在列表中添加元素
 
 ### 在列表末尾添加元素
-
+```bash
 vim 25.py
+```
 ```python
 motorcycles = ['honda','yamaha','suzuki']
 print(motorcycles)
@@ -95,7 +106,9 @@ print(mt)
 ```
 
 ### 在列表中插入元素
+```bash
 vim 26.py
+```
 ```python
 motorcycles = ['honda','yamaha','suzuki']
 motorcycles.insert(0,'ducati')
@@ -108,7 +121,9 @@ print(motorcycles)
 ## 从列表中删除元素
 
 ### 使用del语句删除元素
+```bash
 vim 27.py
+```
 ```python
 motorcycles = ['honda','yamaha','suzuki']
 print(motorcycles)
@@ -129,7 +144,9 @@ print(mt)
 ```
 
 ### 使用方法pop()删除元素
+```bash
 vim 28.py
+```
 ```python
 motorcycles = ['honda','yamaha','suzuki']
 print(motorcycles)
@@ -148,7 +165,9 @@ suzuki      //输出被赋值列表
 ```
 
 ### 弹出列表中任何位置处元素
+```bash
 vim 29.py
+```
 ```python
 motorcycles = ['honda','yamaha','suzuki']
 first_owned = motorcycles.pop(0)
@@ -159,7 +178,9 @@ The last motorcycle I owned was a Honda.
 ```
 
 ### 根据值删除元素
+```bash
 vim 30.py
+```
 ```python
 motorcycles = ['honda','yamaha','suzukli','ducati']
 print(motorcycles)
@@ -182,7 +203,9 @@ A Yamaha is too expensive for me.
 创建的列表中，元素的排序应用
 
 ## 使用方法sort()对列表进行永久性排序
+```bash
 vim 31.py
+```
 ```python
 cars = ['bmw','audi','toyota','subaru']
 cars.sort()
@@ -196,7 +219,9 @@ print(cars)
 ```
 
 ## 使用函数sorted()对列表进行临时排序
+```bash
 vim 32.py
+```
 ```python
 cars = ['bmw','audi','toyota','subaru']
 print("Here is the original list:")
@@ -218,7 +243,9 @@ Here os the original list again:
 ```
 
 ## 倒着打印列表
+```bash
 vim 33.py
+```
 ```python
 cars = ['bmw','audi','toyota','subaru']
 print(cars)
@@ -231,7 +258,9 @@ print(cars)
 ```
 
 ## 确定列表的长度
+```bash
 vim 34.py
+```
 ```python
 cars = ['bmw','audi','toyota','subaru']
 print(len(cars))
