--- a/source/_posts/timeline/2020-12-21 hexo-next7食用方法.md
+++ b/source/_posts/timeline/2020-12-21 hexo-next7食用方法.md
@@ -2,9 +2,9 @@
 title: hexo-next7 食用方法 # 主题
 date: 2020-12-21 00:00:00 # 时间
 tags: # 标签
- - Tools
+ - Hexo
 urlname: use-hexo-next7
-categories:  website
+categories:  timeline
 copyright: false
 ---
 # 博客启用（前略环境搭建）
