--- a/source/_posts/timeline/2021-01-05-2 云函数.md
+++ b/source/_posts/timeline/2021-01-05-2 云函数.md
@@ -5,7 +5,7 @@ date: 2021-01-05 00:00:02
 urlname: function-cloud
 tags:
 - CloudService
-categories: website
+categories: timeline
 ---
 # 前言
 [云函数简介](https://developers.weixin.qq.com/miniprogram/dev/wxcloud/guide/functions.html)  
