--- a/source/_posts/timeline/2021-01-06 图床搭建.md
+++ b/source/_posts/timeline/2021-01-06 图床搭建.md
@@ -5,7 +5,9 @@ date: 2021-01-06 00:00:01
 urlname: img-make
 tags: 
 - Object Storage
-categories: website
+- Domain
+categories: timeline
+copyright: true
 ---
 需要准备对象存储及域名，理论"永久链"图床，可在各云服务商或个人服务器间迁移数据  
 如果你是国外的域名，markdown是国内使用，需要绑定国内第三方dns，这里以[namesilo](https://www.namesilo.com/)域名绑定[dnspod](https://www.dnspod.cn/)为例。
