--- a/source/_posts/timeline/2022-09-04 301跳转.md
+++ b/source/_posts/timeline/2022-09-04 301跳转.md
@@ -2,9 +2,11 @@
 title: Cloudflare 301 跳转 # 主题
 date: 2022-09-04 00:00:00 # 时间
 tags: # 标签
- - Tools
+ - Http
 urlname: cloudflare-301-url
-categories:  website
+categories:  timeline
+tags: 
+- Domain
 copyright: true
 ---
 # 购买域名、注册cloudflare账号
