--- a/source/_posts/C#/2021-07-01 C#基础.md
+++ b/source/_posts/C#/2021-07-01 C#基础.md
@@ -3,7 +3,10 @@ title: C# 基础
 copyright: true
 date: 2021-01-05 00:00:01
 urlname: Csharp-base
-categories: C#
+tags: 
+ - C#
+ - .NET
+categories: c#
 ---
 # C#语言及特点
 * C#是微软公司发布的一种**面向对象**的、运行于.NET Framework 和 .NET Core (完全开源，跨平台)之上的高级程序设计语言。
