--- a/source/_posts/python/python3/2021-06-22 02、变量和简单数据类型.md
+++ b/source/_posts/python/python3/2021-06-22 02、变量和简单数据类型.md
@@ -5,9 +5,12 @@ date: 2021-06-22 00:00:00
 urlname: variables-and-simple-data-types
 categories: 
 - python
+- python3手册
 ---
 # 运行hello world
+```bash
 vim 1.py
+```
 ```python
 print("hello Python world!")
 ```
@@ -17,7 +20,9 @@ hello Python world!
 <!-- more -->  
 
 # 变量
+```bash
 vim 2.py
+```
 ```python
 message = "Hello Python world!"
 print(message)
@@ -25,7 +30,10 @@ print(message)
 ```txt
 hello Python world!
 ```
+***
+```bash
 vim 3.py
+```
 ```python
 message = "Hello Python world!"
 print(message)
@@ -45,7 +53,9 @@ Hello world!
 * 不能将**Python关键字**和**函数名**作为变量名使用，如：print
 
 ## 使用变量时的错误
+```bash
 vim 4.py
+```
 ```python
 message = "Hello world!"
 print(mesage)
@@ -64,7 +74,9 @@ NameError: name 'mesage' is not defined     //mesage无法识别
 ```
 
 ## 使用方法修改字符串大小写
+```base
 vim 5.py
+```
 ```python
 name = "ada lovelace"
 print(name.title())
@@ -74,7 +86,10 @@ Ada Lovelace
 ```
 titile（）以首字母大写的方式显示每个单词，即将每个单词的首字母都改为大写。
 
+***
+```bash
 vim 6.py
+```
 ```python
 name = "ada lovelace"
 print(name.title())
@@ -88,7 +103,9 @@ ada lovelace
 ```
 
 ## 合并字符串
+```base
 vim 7.py
+```
 ```python
 first_name = "ada"
 last_name = "lovelace"
@@ -106,7 +123,9 @@ Hello,Ada Lovelace!
 ```
 
 ## 使用制表符或换行符来添加空白
+```base
 vim 8.py
+```
 ```python
 print("Python")
 print("Languages:\nPython\nC\nJava")
@@ -125,7 +144,9 @@ Languages:
 ```
 
 ## 删除空白
+```bash
 vim 9.py
+```
 ```python
 favorite_language = ' python '
 print(favorite_language)
@@ -139,7 +160,9 @@ python
 ```
 
 ## 使用字符串时避免语法错误
+```bash
 vim 10.py
+```
 ```python
 message = 'One of Python's strengths is its diverse community.'
 print(message)
@@ -150,8 +173,10 @@ print(message)
                              ^
 SyntaxError: invalid syntax
 ```
-
+***
+```bash
 vim 11.py
+```
 ```python
 message = "One of Python's strengths is its diverse community."
 print(message)
@@ -161,7 +186,9 @@ One of Python's strengths is its diverse community.
 ```
 
 ## Python 2 中的print语句
+```bash
 vim 12.py
+```
 ```python
 print "Hello Python 2.7 World!"
 ```
@@ -172,7 +199,9 @@ Hello Python 2.7 World!
 # 数字
 
 ## 整数
+```bash
 vim 13.py
+```
 ```python
 print( 2 + 3 )
 print( 3 - 2 )
@@ -185,8 +214,10 @@ print( 3 / 2 )
 6
 1.5
 ```
-
+***
+```bash
 vim 14.py
+```
 ```python
 print( 3 ** 2 )
 print( 3 ** 3 )
@@ -203,7 +234,9 @@ print( ( 2 + 3 ) * 4 )
 ```
 
 ## 浮点型
+```bash
 vim 15.py
+```
 ```python
 print( 0.1 + 0.1 )
 print( 0.2 + 0.2 )
@@ -224,7 +257,9 @@ print( 3 * 0.1 )
 ```
 
 ## 使用函数str()避免类型错误
+```bash
 vim 16.py
+```
 ```python
 age = 23
 message = "Happy " + age + "rd Birthday!"   #类型错误
@@ -236,8 +271,10 @@ Traceback (most recent call last):
     message = "Happy " + age + "rd Birthday!"
 TypeError: must be str, not int
 ```
-
+***
+```bash
 vim 17.py
+```
 ```python
 age = 23
 message = "Happy " + str(age) + "rd Birthday!"
@@ -251,7 +288,9 @@ Happy 23rd Birthday!
 与c语言类似，3/2=1而不是1.5
 
 # 注释
+```bash
 vim 18.py
+```
 ```python
 # 向大家问好
 print("Hello Python people!")
@@ -261,7 +300,9 @@ Hello Python people!
 ```
 
 # Python 之禅
+```bash
 vim 19.py
+```
 ```python
 import this
 ```
