--- a/source/_posts/timeline/2021-01-05-1 域名的使用.md
+++ b/source/_posts/timeline/2021-01-05-1 域名的使用.md
@@ -4,8 +4,8 @@ copyright: true
 date: 2021-01-05 00:00:01
 urlname: make-domainname
 tags: # 标签
- - Domain
- - Git Page
+- Domain
+- Git Page
 categories: timeline
 ---
 # 域名服务商
@@ -36,7 +36,7 @@ whois查询：https://domain.163yun.com/
 ICANN更多信息：https://www.icann.org/news/announcement-2018-05-22-zh
 
 # 域名跳转指定url方案
-> 2022-08-08 更新，现在可以使用 cloudflare 的 [workers](2022-09-04/cloudflare-301-url) 进行显示url跳转
+> 2022-08-08 更新，现在可以使用 cloudflare 的 [workers](../../2022-09-04/cloudflare-301-url) 进行显示url跳转
 
 
 ## 方案一：github仓库跳转  
