--- a/source/_posts/C#/2023-01-10  ABP架构.md
+++ b/source/_posts/C#/2023-01-10  ABP架构.md
@@ -11,15 +11,15 @@ categories: c#
 ---
 > 官网：https://docs.abp.io/
 # 分层
-> ABP框架遵循DDD原则和模式去实现分层应用程序模型,该模型由四个基本层组成
-* [表示层](#PresentationLayer): 为用户提供接口. 使用应用层实现与用户交互.
-* [应用层](#ApplicationLayer): 表示层与领域层的中介,编排业务对象执行特定的应用程序任务. 使用应用程序逻辑实现用例.
-* [领域层](#DomainLayer): 包含业务对象以及业务规则. 是应用程序的核心.
-* [基础设施层](#InfrastructureLayer): 提供通用的技术功能,支持更高的层,主要使用第三方类库.
+> ABP 框架遵循 DDD 原则和模式去实现分层应用程序模型，该模型由四个基本层组成。
+* [表示层](#PresentationLayer): 为用户提供接口，使用应用层实现与用户交互。
+* [应用层](#ApplicationLayer): 表示层与领域层的中介，编排业务对象执行特定的应用程序任务， 使用应用程序逻辑实现用例。
+* [领域层](#DomainLayer): 包含业务对象以及业务规则，是应用程序的核心。
+* [基础设施层](#InfrastructureLayer): 提供通用的技术功能,支持更高的层，主要使用第三方类库。
 
 <!--more-->
 
-# ABP架构各层依赖关系
+# ABP 架构各层依赖关系
 ```mermaid
  graph TB
     A(.Application)
@@ -46,7 +46,7 @@ categories: c#
 ```
 
 
-# ABP各层作用
+# ABP 各层作用
 ## <p id="PresentationLayer">表示层</a>
 ### .HttpApi.Host
 项目作为一个独立的端点提供 HTTP API 服务，供客户端调用。
@@ -59,7 +59,7 @@ categories: c#
 
 ## <p id="ApplicationLayer">应用层</a>
 ### .Application.Contracts
-> 它依赖 .Domain.Shared 因为它可能会在应用接口和DTO中使用常量，枚举和其他的共享对象。
+> 它依赖 .Domain.Shared 因为它可能会在应用接口和 DTO 中使用常量，枚举和其他的共享对象。
 
 项目主要包含 应用服务 interfaces 和应用层的 数据传输对象（DTO）。它用于分离应用层的接口和实现。这种方式可以将接口项目做为约定包共享给客户端。
 
@@ -85,6 +85,6 @@ categories: c#
 例如 BookType 枚举和 BookConsts 类（可能是 Book 实体用到的常数字段，像 MaxNameLength ）都适合放在这个项目中。
 ## <p id="InfrastructureLayer">基础设施层</a>
 ### .EntityFrameworkCore
->它依赖 .Domain 项目，因为它需要引用实体和仓储接。
+> 它依赖 .Domain 项目，因为它需要引用实体和仓储接。
 
-EF Core核心基础依赖项目，这是集成 EF Core 的项目。它定义了 DbContext 并实现 .Domain 项目中定义的仓储接口，包含：数据上下文、数据库映射、EF Core仓储实现等。
+EF Core 核心基础依赖项目，这是集成 EF Core 的项目。它定义了 DbContext 并实现 .Domain 项目中定义的仓储接口，包含：数据上下文、数据库映射、EF Core 仓储实现等。
