--- a/source/_posts/AI/2023-03-21 N 卡安装原生 webui 进行 AI 绘画.md
+++ b/source/_posts/AI/2023-03-21 N 卡安装原生 webui 进行 AI 绘画.md
@@ -1,5 +1,5 @@
 ---
-title: ubuntu 下 N 卡安装原生 webui 进行 AI 绘画
+title: Ubuntu 下 N 卡安装原生  Stable Diffusion Webui 进行 AI 绘画
 date: 2023-03-21 00:00:00
 urlname: ubuntu-nvidia-install-stable-diffusion-webui
 tags: 
