--- a/source/_posts/timeline/2023-03-24 WIN NAS.md
+++ b/source/_posts/timeline/2023-03-24 WIN NAS.md
@@ -137,7 +137,15 @@ DevicePasswordLessBuildVersion改为 0
 |[7z](https://www.7-zip.org/)|解压压缩||
 |[Docker](https://docs.docker.com/get-docker/)|容器服务| 务必装好 WSL2|
 |[Todesk](https://www.todesk.com/download.html)|||
+|Git|
+|Renamer|
+|chrome|
+|百度网盘|
+|阿里云盘|
+|115 网盘|
 |Clash||||
+|OBS|
+|语雀|
 |[ILSpy](https://github.com/icsharpcode/ILSpy/releases)|||
 |[VS](https://visualstudio.microsoft.com/)|.NET、C#、C++ 全家桶|
 |[VS Code](https://code.visualstudio.com/Download)|||
