--- a/source/_posts/timeline/2023-03-24 WIN NAS.md
+++ b/source/_posts/timeline/2023-03-24 WIN NAS.md
@@ -30,6 +30,7 @@ categories:  timeline
 | 机箱风扇 | id-coolding 14cm      | 33   |            |
 | 合计     | -                     | 643  |            |
 
+<!-- more -->
 
 ### 供电
 硬盘坏的原因无非有三，供电不稳或不足、碰撞震动及 roll 到了  
@@ -65,13 +66,12 @@ CPU的 PCIE 3.0 \*24 最大速度约为 **24GB/s**
 机械盘速度目前顺序读能到 100MB/s，最大不会超过 250MB/s，4k 随机速度可以忽略，所以南桥扩展 sata 给机械盘就够用了，日常根本不会跑满
 
 ### [机箱](https://item.jd.com/100022763272.html#product-detail)
-支持 13 个 3.5 盘，2 个 2.5 盘位。最大容量为 248T + 6T  
+支持 13 个 3.5 盘，2 个 2.5 盘位。最大容量为 60T + 6T  
 
-机械硬盘（单价1200） 二手企业级机械算 13*18T=**234T（100MB/s）**  
+机械硬盘（单价1600） 二手企业级目前最大的机械按 20T 算， 13*20T=**2604T（270MB/s）**  如果阵列卡做存储池合计速度为 13\*270MB/s =3.5GB/s
 
 sata 固态（单价800） 固态 2*3T=**6T(500MB/s)**
 
-<!-- more -->
 ### [主板](https://www.asus.com/tw/motherboards-components/motherboards/tuf-gaming/tuf-gaming-b550m-plus-wi-fi/techspec/)   
 * 直连CPU 15GB/s(CPU阈值 24GB/s)
     * M.2_1（PCIE 4.0x4）：凯侠 RC20 **1T（3GB/s）** ，系统盘
@@ -79,26 +79,26 @@ sata 固态（单价800） 固态 2*3T=**6T(500MB/s)**
 
 
 * 南桥 234T  合计峰值 3 GB/s (芯片组阈值 4GB/s）
-    * M.2_2：台电 **1T（2GB/s)**，每天为系统盘做备份，磁盘忽略
+    * M.2_2：台电 **1T（2GB/s)**，每天为系统盘做增量备份，速度忽略
     * PCIE_2（PCIE 3.0x4）：9271 8i 阵列卡 + 扩展卡 82885t
-        * 13*18T=**180T（1.3GB/s）**，即单口 750MB/s，总共 2.5GB/s，对于机械盘完全够用，机械顺序跑满按 150MB/s，13 盘才 2GB/s
+        * 13*20T=**260T（1.3GB/s）**，即单口 750MB/s，总共 2.5GB/s，对于机械盘完全够用，机械顺序跑满按 150MB/s，13 盘才 2GB/s
     * 主板 sata：4 口 6Gb/s 接口，即和扩展卡一样
         * 2 sata 固态 6T **（1GB/s）**
 
 
 
 ## 硬盘分配
-> 使用 9271 8i 阵列卡接入南桥，使用 82885t 作为扩展卡，机械盘以 250MB/s 计算，固态以 3GB/s 计算
+> 使用 9271 8i 阵列卡接入南桥，使用 82885t 作为扩展卡，机械盘以 250MB/s 计算，固态以 3GB/s 计算，机械盘按 14T 算
 
 | 存储池        | 硬件                                                | 容量 | 速度            | 功能             |
 | ------------- | --------------------------------------------------- | ---- | --------------- | ---------------- |
 | 系统盘        | 凯侠 RC20                                           | 1T   | 3GB/s           | 软件默认装系统盘 |
 | 系统盘备份    | 台电                                                | 1T   | 2GB/s（日常 0） | 每日备份         |
 | 软存储池1     | 2T*2 的 PCIE 3.0 固态                               | 4T   | 6GB/s           | 开发测试环境数据 |
-| 软硬存储池1   | 2T*2 的 3.0 固态 + 18T*4（硬raid10） 的机械分层储池 | 36T  | 6GB/s~0.5GB/s   | 生产环境数据     |
-| 硬存储池1     | 18T*4(3+1)=54T 的机械盘硬 raid5                     | 54T  | 750MB/s         | nas-tools 影视库 |
-| 硬存储池2     | 18T*4(3+1)=54T 的机械盘硬 raid5                     | 54T  | 750MB/s         | 内网共享文件     |
-| 裸盘机械1     | NTFS                                                | 18T  | 250MB/s         | 游戏冷备         |
+| 软硬存储池1   | 2T*2 的 3.0 固态 + 14T*4（硬raid10） 的机械分层储池 | 28T  | 6GB/s~0.5GB/s   | 生产环境数据     |
+| 硬存储池1     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | nas-tools 影视库 |
+| 硬存储池2     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | 内网共享文件     |
+| 裸盘机械1     | NTFS                                                | 14T  | 250MB/s         | 游戏冷备&AI图库  |
 | 裸盘sata固态1 | NTFS                                                | 3T   | 500MB/s         | 游戏             |
 | 裸盘sata固态2 | NTS                                                 | 3T   | 500MB/s         | 其他文件         |
 
@@ -111,6 +111,8 @@ sata 固态（单价800） 固态 2*3T=**6T(500MB/s)**
 ```dos
 C:\ProgramData\Microsoft\Windows\Start Menu\Programs\Startup
 ```
+## Intel驱动
+https://www.intel.com/content/www/us/en/support/detect.html
 
 ## 内网穿透
 [nps](https://github.com/ehang-io/nps/releases)
@@ -129,41 +131,71 @@ DevicePasswordLessBuildVersion改为 0
 ## WSL2
 在服务器管理里添加角色和功能里打开 hyper-v，然后在命令行输入 wsl --install，之后重启，重启完继续 wsl --install，然后 wsl -l -v 查看版本为 2 即安装成功
 
+
 # 应用
-
 ## 应用程序
-|名称|功能|备注|
-|---|---|---|
-|[7z](https://www.7-zip.org/)|解压压缩||
-|[Docker](https://docs.docker.com/get-docker/)|容器服务| 务必装好 WSL2|
-|[Todesk](https://www.todesk.com/download.html)|||
-|Git|
-|Renamer|
-|chrome|
-|百度网盘|
-|阿里云盘|
-|115 网盘|
-|Clash||||
-|OBS|
-|语雀|
-|[ILSpy](https://github.com/icsharpcode/ILSpy/releases)|||
-|[VS](https://visualstudio.microsoft.com/)|.NET、C#、C++ 全家桶|
-|[VS Code](https://code.visualstudio.com/Download)|||
-|[Postmam](https://www.postman.com/)|api、grpc、socket、mq调试||
-|[MQTT X](https://mqttx.app/)|||
-|[AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager/releases)|redis GUI||
-|[Navicat](https://navicat.com)|||
-|[Goland](https://www.jetbrains.com/go/)|||
+| 名称                                                                                         | 功能                      | 备注          |
+| -------------------------------------------------------------------------------------------- | ------------------------- | ------------- |
+| [7z](https://www.7-zip.org/)                                                                 | 解压压缩                  |               |
+| [Docker](https://docs.docker.com/get-docker/)                                                |                           | 务必装好 WSL2 |
+| [ToDesk](https://www.todesk.com/download.html)                                               |                           |               |
+| [Git](https://git-scm.com/downloads)                                                         |
+| [ReNamer](http://www.den4b.com/)                                                             |
+| [Chrome](https://www.google.com/chrome/)                                                     |
+| [百度网盘](https://pan.baidu.com/download?from=header#win)                                   |
+| [阿里云盘](https://www.aliyundrive.com/)                                                     |
+| [115 网盘](https://115.com/)                                                                 |
+| Clash                                                                                        |                           |               |  |
+| [WPS](https://115.com/)                                                                      |
+| [OBS](https://obsproject.com/)                                                               |
+| [语雀](https://www.yuque.com/download)                                                       |
+| [ILSpy](https://github.com/icsharpcode/ILSpy/releases)                                       |                           |               |
+| [VS](https://visualstudio.microsoft.com/)                                                    | .NET、C#、C++ 全家桶      |
+| [VS Code](https://code.visualstudio.com/Download)                                            |                           |               |
+| [Postmam](https://www.postman.com/)                                                          | api、grpc、socket、mq调试 |               |
+| [MQTT X](https://mqttx.app/)                                                                 |                           |               |
+| [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager/releases) | redis GUI                 |               |
+| [Navicat](https://navicat.com)                                                               |                           |               |
+| [Goland](https://www.jetbrains.com/go/)                                                      |                           |               |
+| [Bandicam](https://www.bandicam.cn/)                                                         |
+| [WinSCP](https://winscp.net/eng/download.php)                                                |
+| [VOICEMEETER ](https://voicemeeter.com/)                                                     |
+| [qBittorrent](https://www.qbittorrent.org/download)                                          |
+| [Telegram](https://telegram.org/)                                                            |
+| [blender](https://www.blender.org/)                                                          |
+| [conda](https://docs.conda.io/projects/conda/en/stable/user-guide/install/windows.html)      |
+| [开黑啦](https://www.kookapp.cn/)                                                            |
+| [雀魂](https://game.maj-soul.com/1/)                                                         |
+| [Discord](https://discord.com/)                                                              |
+| [坚果云](https://www.jianguoyun.com/s/downloads)                                             |
+| [Notepad++](https://notepad-plus-plus.org/downloads/)                                        |
+| [Quicker](https://getquicker.net/Download)                                                   |
+| [Live2D]()                                                                                   |
+| [Adobe 2023]()                                                                               |
 
-## Docker 服务
-|名称|功能|备注|
-|---|---|---|
-| MySQL|||
-|Redis|||
-|MongDB|||
-|RabbitMQ|||
-|Superset|||
-|Nginx Proxy Manager|||
-|Portainer|||
+
+
+## Docker 内网服务
+| 名称                                                         | 功能         | 备注 |
+| ------------------------------------------------------------ | ------------ | ---- |
+| [portainer](https://hub.docker.com/r/portainer/portainer)    | docker webui |
+| [pingvin-share](https://github.com/stonith404/pingvin-share) | 分享网盘     |
+| [memos](https://github.com/usememos/memos)                   | 便签         |
+| [postgres](https://hub.docker.com/_/postgres)                |              |
+| [mariadb](https://hub.docker.com/_/mariadb)                  |              |      |
+| [redis](https://hub.docker.com/_/redis)                      |              |      |
+| [mongo](https://hub.docker.com/_/mongo)                      |              |      |
+| [rabbitmq](https://hub.docker.com/_/rabbitmq)                |              |      |
+| [superset](https://github.com/apache/superset)               | 数字看板     |      |
+| [qinglong](https://github.com/whyour/qinglong)               |
+| [Guacamole](https://hub.docker.com/r/guacamole/guacamole)    |
+| [bililive](https://github.com/hr3lxphr6j/bililive-go)        | 录播         |
+| [uptime-kuma](https://github.com/louislam/uptime-kuma)   |网站监控|
+
+## Docker 公网服务
+| 名称                                                                            | 功能      | 备注 |
+| ------------------------------------------------------------------------------- | --------- | ---- |
+| [Nginx Proxy Manager](https://github.com/NginxProxyManager/nginx-proxy-manager) | nginx GUI |      |
+
 
 ## VS Code 插件
