--- a/source/_posts/timeline/2023-03-24 WIN NAS.md
+++ b/source/_posts/timeline/2023-03-24 WIN NAS.md
@@ -18,15 +18,15 @@ categories:  timeline
 ## 配置
 | 类型     | 名称                  | 价格 | 来源       |
 | -------- | --------------------- | ---- | ---------- |
-| CPU      | 5700G 8c16t           | 0    | ITX拆机    |
-| 散热     | 利民AXP120            | 0    | ITX拆机    |
+| CPU      | 5700G 8c16t           | 0    | ITX 拆机    |
+| 散热     | 利民 AXP120            | 0    | ITX 拆机    |
 | GPU      | Vega8                 | 0    | 核显       |
-| 主板     | 华硕 B550m PLUS(WIFI) | 0    | ITX拆机    |
-| 内存     | 光威16G*4 DDR4 3200   | 0    | ITX拆机    |
-| 硬盘     | 凯侠 RC20             | 0    | ITX拆机    |
-| 硬盘1    | 台电1T                | 0    | ITX拆机    |
-| 电源     | 海韵650W              | 0    | 另一台拆机 |
-| 机箱     | 长城阿基米德7B        | 360  |            |
+| 主板     | 华硕 B550m PLUS(WIFI) | 0    | ITX 拆机    |
+| 内存     | 光威 16G*4 DDR4 3200   | 0    | ITX 拆机    |
+| 硬盘     | 凯侠 RC20             | 0    | ITX 拆机    |
+| 硬盘 1    | 台电 1T                | 0    | ITX 拆机    |
+| 电源     | 海韵 650W              | 0    | 另一台拆机 |
+| 机箱     | 长城阿基米德 7B        | 360  |            |
 | 机箱风扇 | id-coolding 14cm      | 33   |            |
 | 合计     | -                     | 643  |            |
 
@@ -44,7 +44,7 @@ categories:  timeline
 ### PCIE
 > [主板](https://www.asus.com/tw/motherboards-components/motherboards/tuf-gaming/tuf-gaming-b550m-plus-wi-fi/techspec/)   
 3 个 PCIE 槽，PCIE 4.0\*16 和 PCIE 3.0\*16（芯片组） 和 PCIE 3.0\*1（芯片组），硬件接口分别为 PCIE 16、PCIE 16、PCIE 1 展示    
-2 个 M.2 插槽，PCIE 4.0\*4（CPU直连）和 PCIE 3.0\*4（芯片组）
+2 个 M.2 插槽，PCIE 4.0*4（CPU 直连）和 PCIE 3.0*4（芯片组）
 4 个 SATA 插槽（芯片组）
 
 > [CPU](https://www.amd.com/en/product/11171)  有 24 条 PCIE 3.0，第一个 PCIE 占用 16 条，第一个 M.2 占用 4 条，南桥（芯片组）占用 4 条，即
@@ -61,19 +61,19 @@ categories:  timeline
  
 主板南桥 PCIE 3.0 \*4，即芯片组的最大速度约为 **4GB/s**
 
-CPU的 PCIE 3.0 \*24 最大速度约为 **24GB/s**
+CPU 的 PCIE 3.0 *24 最大速度约为 **24GB/s**
 
 机械盘速度目前顺序读能到 100MB/s，最大不会超过 250MB/s，4k 随机速度可以忽略，所以南桥扩展 sata 给机械盘就够用了，日常根本不会跑满
 
 ### [机箱](https://item.jd.com/100022763272.html#product-detail)
 支持 13 个 3.5 盘，2 个 2.5 盘位。最大容量为 60T + 6T  
 
-机械硬盘（单价1600） 二手企业级目前最大的机械按 20T 算， 13*20T=**2604T（270MB/s）**  如果阵列卡做存储池合计速度为 13\*270MB/s =3.5GB/s
+机械硬盘（单价 1600） 二手企业级目前最大的机械按 20T 算， 13*20T=**2604T（270MB/s）**  如果阵列卡做存储池合计速度为 13\*270MB/s =3.5GB/s
 
-sata 固态（单价800） 固态 2*3T=**6T(500MB/s)**
+sata 固态（单价 800） 固态 2*3T=**6T(500MB/s)**
 
 ### [主板](https://www.asus.com/tw/motherboards-components/motherboards/tuf-gaming/tuf-gaming-b550m-plus-wi-fi/techspec/)   
-* 直连CPU 15GB/s(CPU阈值 24GB/s)
+* 直连 CPU 15GB/s(CPU 阈值 24GB/s)
     * M.2_1（PCIE 4.0x4）：凯侠 RC20 **1T（3GB/s）** ，系统盘
     * PCIE_1（PCIE 4.0x16）：[扩展卡](https://item.jd.com/10021208284029.html) 拆分为 PCIE 3.0(3GB/s) \*4 的 4 个 2T 的 3.0 M.2 硬盘，即 **8T（12G/s）**
 
@@ -94,13 +94,13 @@ sata 固态（单价800） 固态 2*3T=**6T(500MB/s)**
 | ------------- | --------------------------------------------------- | ---- | --------------- | ---------------- |
 | 系统盘        | 凯侠 RC20                                           | 1T   | 3GB/s           | 软件默认装系统盘 |
 | 系统盘备份    | 台电                                                | 1T   | 2GB/s（日常 0） | 每日备份         |
-| 软存储池1     | 2T*2 的 PCIE 3.0 固态                               | 4T   | 6GB/s           | 开发测试环境数据 |
-| 软硬存储池1   | 2T*2 的 3.0 固态 + 14T*4（硬raid10） 的机械分层储池 | 28T  | 6GB/s~0.5GB/s   | 生产环境数据     |
-| 硬存储池1     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | nas-tools 影视库 |
-| 硬存储池2     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | 内网共享文件     |
-| 裸盘机械1     | NTFS                                                | 14T  | 250MB/s         | 游戏冷备&AI图库  |
-| 裸盘sata固态1 | NTFS                                                | 3T   | 500MB/s         | 游戏             |
-| 裸盘sata固态2 | NTS                                                 | 3T   | 500MB/s         | 其他文件         |
+| 软存储池 1     | 2T*2 的 PCIE 3.0 固态                               | 4T   | 6GB/s           | 开发测试环境数据 |
+| 软硬存储池 1   | 2T*2 的 3.0 固态 + 14T*4（硬 raid10） 的机械分层储池 | 28T  | 6GB/s~0.5GB/s   | 生产环境数据     |
+| 硬存储池 1     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | nas-tools 影视库 |
+| 硬存储池 2     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | 内网共享文件     |
+| 裸盘机械 1     | NTFS                                                | 14T  | 250MB/s         | 游戏冷备&AI 图库  |
+| 裸盘 sata 固态 1 | NTFS                                                | 3T   | 500MB/s         | 游戏             |
+| 裸盘 sata 固态 2 | NTS                                                 | 3T   | 500MB/s         | 其他文件         |
 
 # 系统安装
 [Windows Server DataCenter 2022](https://www.microsoft.com/zh-cn/evalcenter/download-windows-server-2022)
@@ -111,7 +111,7 @@ sata 固态（单价800） 固态 2*3T=**6T(500MB/s)**
 ```dos
 C:\ProgramData\Microsoft\Windows\Start Menu\Programs\Startup
 ```
-## Intel驱动
+## Intel 驱动
 https://www.intel.com/content/www/us/en/support/detect.html
 
 ## 内网穿透
@@ -124,7 +124,7 @@ https://www.intel.com/content/www/us/en/support/detect.html
 ```dos
 计算机\HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\PasswordLess\Device
 ```
-DevicePasswordLessBuildVersion改为 0
+DevicePasswordLessBuildVersion 改为 0
 
 > win+r 运行 netplwiz，取消掉必须输入选框
 
@@ -152,14 +152,14 @@ DevicePasswordLessBuildVersion改为 0
 | [ILSpy](https://github.com/icsharpcode/ILSpy/releases)                                       |                           |               |
 | [VS](https://visualstudio.microsoft.com/)                                                    | .NET、C#、C++ 全家桶      |
 | [VS Code](https://code.visualstudio.com/Download)                                            |                           |               |
-| [Postmam](https://www.postman.com/)                                                          | api、grpc、socket、mq调试 |               |
+| [Postmam](https://www.postman.com/)                                                          | api、grpc、socket、mq 调试 |               |
 | [MQTT X](https://mqttx.app/)                                                                 |                           |               |
 | [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager/releases) | redis GUI                 |               |
 | [Navicat](https://navicat.com)                                                               |                           |               |
 | [Goland](https://www.jetbrains.com/go/)                                                      |                           |               |
 | [Bandicam](https://www.bandicam.cn/)                                                         |
 | [WinSCP](https://winscp.net/eng/download.php)                                                |
-| [VOICEMEETER ](https://voicemeeter.com/)                                                     |
+| [VOICEMEETER](https://voicemeeter.com/)                                                     |
 | [qBittorrent](https://www.qbittorrent.org/download)                                          |
 | [Telegram](https://telegram.org/)                                                            |
 | [blender](https://www.blender.org/)                                                          |
@@ -170,9 +170,9 @@ DevicePasswordLessBuildVersion改为 0
 | [坚果云](https://www.jianguoyun.com/s/downloads)                                             |
 | [Notepad++](https://notepad-plus-plus.org/downloads/)                                        |
 | [Quicker](https://getquicker.net/Download)                                                   |
-| [Live2D]()                                                                                   |
-| [Adobe 2023]()                                                                               |
-
+| [Live2D](https://example.com)                                                                                   |
+| [Adobe](https://weibo.com/u/1112829033)                                         |
+|[Sinpaste](https://www.snipaste.com/)
 
 
 ## Docker 内网服务
