--- a/source/_posts/timeline/2023-03-24 WIN NAS.md
+++ b/source/_posts/timeline/2023-03-24 WIN NAS.md
@@ -18,17 +18,18 @@ categories:  timeline
 ## 配置
 | 类型     | 名称                  | 价格 | 来源       |
 | -------- | --------------------- | ---- | ---------- |
-| CPU      | 5700G 8c16t           | 0    | ITX 拆机    |
-| 散热     | 利民 AXP120            | 0    | ITX 拆机    |
+| CPU      | 5700G 8c16t           | 0    | ITX 拆机   |
+| 散热     | 利民 AXP120           | 0    | ITX 拆机   |
 | GPU      | Vega8                 | 0    | 核显       |
-| 主板     | 华硕 B550m PLUS(WIFI) | 0    | ITX 拆机    |
-| 内存     | 光威 16G*4 DDR4 3200   | 0    | ITX 拆机    |
-| 硬盘     | 凯侠 RC20             | 0    | ITX 拆机    |
-| 硬盘 1    | 台电 1T                | 0    | ITX 拆机    |
-| 电源     | 海韵 650W              | 0    | 另一台拆机 |
-| 机箱     | 长城阿基米德 7B        | 360  |            |
-| 机箱风扇 | id-coolding 14cm      | 33   |            |
-| 合计     | -                     | 643  |            |
+| 主板     | 华硕 B550m PLUS(WIFI) | 0    | ITX 拆机   |
+| 内存     | 光威 16G*4 DDR4 3200  | 0    | ITX 拆机   |
+| 硬盘     | 凯侠 RC20             | 0    | ITX 拆机   |
+| 硬盘 1   | 台电 1T               | 0    | ITX 拆机   |
+| 硬盘 2   | 银河 16T              | 990  | tb         |
+| 电源     | 海韵 650W             | 0    | 另一台拆机 |
+| 机箱     | 长城阿基米德 7B       | 261  | pdd        |
+| 机箱风扇 | id-coolding 14cm      | 33   | jd         |
+| 合计     | -                     | 1283 |            |
 
 <!-- more -->
 
@@ -66,9 +67,9 @@ CPU 的 PCIE 3.0 *24 最大速度约为 **24GB/s**
 机械盘速度目前顺序读能到 100MB/s，最大不会超过 250MB/s，4k 随机速度可以忽略，所以南桥扩展 sata 给机械盘就够用了，日常根本不会跑满
 
 ### [机箱](https://item.jd.com/100022763272.html#product-detail)
-支持 13 个 3.5 盘，2 个 2.5 盘位。最大容量为 60T + 6T  
+支持 13 个 3.5 盘，2 个 2.5 盘位。最大容量为 260T + 6T  
 
-机械硬盘（单价 1600） 二手企业级目前最大的机械按 20T 算， 13*20T=**2604T（270MB/s）**  如果阵列卡做存储池合计速度为 13\*270MB/s =3.5GB/s
+机械硬盘（单价 1600） 二手企业级目前最大的机械按 20T 算， 13*20T=**260T（270MB/s）**  如果阵列卡做存储池合计速度为 13\*270MB/s =3.5GB/s
 
 sata 固态（单价 800） 固态 2*3T=**6T(500MB/s)**
 
@@ -88,19 +89,20 @@ sata 固态（单价 800） 固态 2*3T=**6T(500MB/s)**
 
 
 ## 硬盘分配
-> 使用 9271 8i 阵列卡接入南桥，使用 82885t 作为扩展卡，机械盘以 250MB/s 计算，固态以 3GB/s 计算，机械盘按 14T 算
+> 使用 9271 8i 阵列卡接入南桥，使用 82885t 作为扩展卡，机械盘以 250MB/s 计算，固态以 3GB/s 计算，机械盘按 16T 算
 
-| 存储池        | 硬件                                                | 容量 | 速度            | 功能             |
-| ------------- | --------------------------------------------------- | ---- | --------------- | ---------------- |
-| 系统盘        | 凯侠 RC20                                           | 1T   | 3GB/s           | 软件默认装系统盘 |
-| 系统盘备份    | 台电                                                | 1T   | 2GB/s（日常 0） | 每日备份         |
-| 软存储池 1     | 2T*2 的 PCIE 3.0 固态                               | 4T   | 6GB/s           | 开发测试环境数据 |
-| 软硬存储池 1   | 2T*2 的 3.0 固态 + 14T*4（硬 raid10） 的机械分层储池 | 28T  | 6GB/s~0.5GB/s   | 生产环境数据     |
-| 硬存储池 1     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | nas-tools 影视库 |
-| 硬存储池 2     | 14T*4(3+1)=42T 的机械盘硬 raid5                     | 42T  | 750MB/s         | 内网共享文件     |
-| 裸盘机械 1     | NTFS                                                | 14T  | 250MB/s         | 游戏冷备&AI 图库  |
-| 裸盘 sata 固态 1 | NTFS                                                | 3T   | 500MB/s         | 游戏             |
-| 裸盘 sata 固态 2 | NTS                                                 | 3T   | 500MB/s         | 其他文件         |
+| 存储池     | 硬件                                                 | 容量 | 速度            | 功能              | 已购 |
+| ---------- | ---------------------------------------------------- | ---- | --------------- | ----------------- | ---- |
+| 系统盘     | 凯侠 RC20                                            | 1T   | 3GB/s           | 软件默认装系统盘  | √    |
+| 系统盘备份 | 台电                                                 | 1T   | 2GB/s（日常 0） | 系统盘周增量备份  | √    |
+| 裸盘1      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker镜像        |
+| 裸盘2      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker周增量备份  |
+| 裸盘3      | 机械                                                 | 16T  | 250MB/s         | AI                | √    |
+| 裸盘4      | sata 固态                                            | 3T   | 500MB/s         | X                 |
+| 裸盘5      | sata 固态                                            | 3T   | 500MB/s         | X                 |
+| 软硬存储池 | 2T*2 的 3.0 固态 + 16T*4（硬 raid10） 的机械分层储池 | 32T  | 6GB/s~0.5GB/s   | docker volume数据 |
+| 硬存储池 1 | 16T*4(3+1)=48T 的机械盘硬 raid5                      | 48T  | 750MB/s         | 内网共享文件      |
+| 硬存储池 2 | 16T*4(3+1)=48T 的机械盘硬 raid5                      | 48T  | 750MB/s         |                   |
 
 # 系统安装
 [Windows Server DataCenter 2022](https://www.microsoft.com/zh-cn/evalcenter/download-windows-server-2022)
@@ -117,7 +119,7 @@ https://www.intel.com/content/www/us/en/support/detect.html
 ## 内网穿透
 [nps](https://github.com/ehang-io/nps/releases)
 
-新建 bat，然后快捷方式丢到开机路径里
+新建 bat，然后快捷方式丢到开机自启路径里
 
 ## 开机自动登录
 > win+r 运行 regedit 注册表
@@ -134,32 +136,32 @@ DevicePasswordLessBuildVersion 改为 0
 
 # 应用
 ## 应用程序
-| 名称                                                                                         | 功能                      | 备注          |
-| -------------------------------------------------------------------------------------------- | ------------------------- | ------------- |
-| [7z](https://www.7-zip.org/)                                                                 | 解压压缩                  |               |
-| [Docker](https://docs.docker.com/get-docker/)                                                |                           | 务必装好 WSL2 |
-| [ToDesk](https://www.todesk.com/download.html)                                               |                           |               |
+| 名称                                                                                         | 功能                       | 备注          |
+| -------------------------------------------------------------------------------------------- | -------------------------- | ------------- |
+| [7z](https://www.7-zip.org/)                                                                 | 解压压缩                   |               |
+| [Docker](https://docs.docker.com/get-docker/)                                                |                            | 务必装好 WSL2 |
+| [ToDesk](https://www.todesk.com/download.html)                                               |                            |               |
 | [Git](https://git-scm.com/downloads)                                                         |
 | [ReNamer](http://www.den4b.com/)                                                             |
 | [Chrome](https://www.google.com/chrome/)                                                     |
 | [百度网盘](https://pan.baidu.com/download?from=header#win)                                   |
 | [阿里云盘](https://www.aliyundrive.com/)                                                     |
 | [115 网盘](https://115.com/)                                                                 |
-| Clash                                                                                        |                           |               |  |
+| Clash                                                                                        |                            |               |  |
 | [WPS](https://115.com/)                                                                      |
 | [OBS](https://obsproject.com/)                                                               |
 | [语雀](https://www.yuque.com/download)                                                       |
-| [ILSpy](https://github.com/icsharpcode/ILSpy/releases)                                       |                           |               |
-| [VS](https://visualstudio.microsoft.com/)                                                    | .NET、C#、C++ 全家桶      |
-| [VS Code](https://code.visualstudio.com/Download)                                            |                           |               |
+| [ILSpy](https://github.com/icsharpcode/ILSpy/releases)                                       |                            |               |
+| [VS](https://visualstudio.microsoft.com/)                                                    | .NET、C#、C++ 全家桶       |
+| [VS Code](https://code.visualstudio.com/Download)                                            |                            |               |
 | [Postmam](https://www.postman.com/)                                                          | api、grpc、socket、mq 调试 |               |
-| [MQTT X](https://mqttx.app/)                                                                 |                           |               |
-| [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager/releases) | redis GUI                 |               |
-| [Navicat](https://navicat.com)                                                               |                           |               |
-| [Goland](https://www.jetbrains.com/go/)                                                      |                           |               |
+| [MQTT X](https://mqttx.app/)                                                                 |                            |               |
+| [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager/releases) | redis GUI                  |               |
+| [Navicat](https://navicat.com)                                                               |                            |               |
+| [Goland](https://www.jetbrains.com/go/)                                                      |                            |               |
 | [Bandicam](https://www.bandicam.cn/)                                                         |
 | [WinSCP](https://winscp.net/eng/download.php)                                                |
-| [VOICEMEETER](https://voicemeeter.com/)                                                     |
+| [VOICEMEETER](https://voicemeeter.com/)                                                      |
 | [qBittorrent](https://www.qbittorrent.org/download)                                          |
 | [Telegram](https://telegram.org/)                                                            |
 | [blender](https://www.blender.org/)                                                          |
@@ -170,9 +172,9 @@ DevicePasswordLessBuildVersion 改为 0
 | [坚果云](https://www.jianguoyun.com/s/downloads)                                             |
 | [Notepad++](https://notepad-plus-plus.org/downloads/)                                        |
 | [Quicker](https://getquicker.net/Download)                                                   |
-| [Live2D](https://example.com)                                                                                   |
-| [Adobe](https://weibo.com/u/1112829033)                                         |
-|[Sinpaste](https://www.snipaste.com/)
+| [Live2D](https://example.com)                                                                |
+| [Adobe](https://weibo.com/u/1112829033)                                                      |
+| [Sinpaste](https://www.snipaste.com/)                                                        |
 
 
 ## Docker 内网服务
@@ -190,9 +192,9 @@ DevicePasswordLessBuildVersion 改为 0
 | [qinglong](https://github.com/whyour/qinglong)               |
 | [Guacamole](https://hub.docker.com/r/guacamole/guacamole)    |
 | [bililive](https://github.com/hr3lxphr6j/bililive-go)        | 录播         |
-| [uptime-kuma](https://github.com/louislam/uptime-kuma)   |网站监控|
+| [uptime-kuma](https://github.com/louislam/uptime-kuma)       | 网站监控     |
 
-## Docker 公网服务
+## Docker 公网服务器
 | 名称                                                                            | 功能      | 备注 |
 | ------------------------------------------------------------------------------- | --------- | ---- |
 | [Nginx Proxy Manager](https://github.com/NginxProxyManager/nginx-proxy-manager) | nginx GUI |      |
