--- a/source/_posts/2023-03-24 WIN NAS.md
+++ b/source/_posts/2023-03-24 WIN NAS.md
@@ -16,20 +16,21 @@ categories:  timeline
 
 # 硬件
 ## 配置
-| 类型     | 名称                  | 价格 | 来源       |
-| -------- | --------------------- | ---- | ---------- |
-| CPU      | 5700G 8c16t           | 0    | ITX 拆机   |
-| 散热     | 利民 AXP120           | 0    | ITX 拆机   |
-| GPU      | Vega8                 | 0    | 核显       |
-| 主板     | 华硕 B550m PLUS(WIFI) | 0    | ITX 拆机   |
-| 内存     | 光威 16G*4 DDR4 3200  | 0    | ITX 拆机   |
-| 硬盘     | 凯侠 RC20             | 0    | ITX 拆机   |
-| 硬盘 1   | 台电 1T               | 0    | ITX 拆机   |
-| 硬盘 2   | 银河 16T              | 990  | tb         |
-| 电源     | 海韵 650W             | 0    | 另一台拆机 |
-| 机箱     | 长城阿基米德 7B       | 261  | pdd        |
-| 机箱风扇 | id-coolding 14cm      | 33   | jd         |
-| 合计     | -                     | 1283 |            |
+| 类型     | 名称                  | 价格 | 来源     |
+| -------- | --------------------- | ---- | -------- |
+| CPU      | 5700G 8c16t           | 0    | ITX 拆机 |
+| 散热     | 利民 AXP120           | 0    | ITX 拆机 |
+| GPU      | Vega8                 | 0    | 核显     |
+| 主板     | 华硕 B550m PLUS(WIFI) | 0    | ITX 拆机 |
+| 内存     | 光威 16G*4 DDR4 3200  | 0    | ITX 拆机 |
+| 硬盘     | 凯侠 RC20             | 0    | ITX 拆机 |
+| 硬盘 1   | 台电 1T               | 0    | ITX 拆机 |
+| 硬盘 2   | 银河 16T              | 990  | tb       |
+| 硬盘3    | 广威长江256G          | 0    | MATX拆机 |
+| 电源     | 海韵 650W             | 0    | MATX拆机 |
+| 机箱     | 长城阿基米德 7B       | 261  | pdd      |
+| 机箱风扇 | id-coolding 14cm      | 33   | jd       |
+| 合计     | -                     | 1283 |          |
 
 <!-- more -->
 
@@ -97,7 +98,7 @@ sata 固态（单价 800） 固态 2*3T=**6T(500MB/s)**
 | 系统盘备份 | 台电                                                 | 1T   | 2GB/s（日常 0） | 系统盘周增量备份  | √    |
 | 裸盘1      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker镜像        |
 | 裸盘2      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker周增量备份  |
-| 裸盘3      | 机械                                                 | 16T  | 250MB/s         | AI                | √    |
+| 分层层储池 | 256G sata+机械                                       | 16T  | 500MB/s~250MB/s | AI                | √    |
 | 裸盘4      | sata 固态                                            | 3T   | 500MB/s         | X                 |
 | 裸盘5      | sata 固态                                            | 3T   | 500MB/s         | X                 |
 | 软硬存储池 | 2T*2 的 3.0 固态 + 16T*4（硬 raid10） 的机械分层储池 | 32T  | 6GB/s~0.5GB/s   | docker volume数据 |
@@ -193,11 +194,43 @@ DevicePasswordLessBuildVersion 改为 0
 | [Guacamole](https://hub.docker.com/r/guacamole/guacamole)    |
 | [bililive](https://github.com/hr3lxphr6j/bililive-go)        | 录播         |
 | [uptime-kuma](https://github.com/louislam/uptime-kuma)       | 网站监控     |
+```
+lsky        docker run -d --restart=always --name lsky -p 40000:80 -v lsky-data:/var/www/html halcyonazure/lsky-pro-docker:latest
 
+memos       docker run -d --restart=always --name memos -p 40001:5230 -v memos-data:/var/opt/memos neosmemo/memos:latest
+
+share       docker run -d --restart=always --name share -p 40002:3000 -v share-data:/opt/app/backend/data stonith404/pingvin-share:latest
+
+alltube     docker run -d --restart=always --name alltube -p 40003:80 rudloff/alltube:latest
+
+bililive    docker run -d --restart=always --name blive -p 40004:8080 -v blive-data:/srv/bililive chigusa/bililive-go:latest
+
+qinglong    docker run -d --restart=always --name qinglong -p 40005:5700 -v qinglong-data:/ql/data whyour/qinglong:latest
+
+kuma        docker run -d --restart=always --name uptime-kuma -p 40006:3001 -v uptime-kuma:/app/data louislam/uptime-kuma:latest
+
+redis       docker run -d --restart=always --name redis -p 40007:6379 -v redis-data:/data -v redis-conf:/usr/local/etc/redis redis:latest
+
+mongo       docker run -d --restart=always --name mongo -p 40008:27017 -e MONGO_INITDB_ROOT_USERNAME=admin -e MONGO_INITDB_ROOT_PASSWORD=admin -v mongo-data:/data/db mongo:latest
+
+postgres    docker run -d --restart=always --name postgres -p 40009:5432 -e POSTGRES_PASSWORD=admin -v postgres-data:/var/lib/postgresql/data postgres:latest
+
+guacamole   docker run -d --restart=always --name guacamole -p 40010:8080 -v guaca-data:/config jwetzell/guacamole:latest
+
+```
 ## Docker 公网服务器
 | 名称                                                                            | 功能      | 备注 |
 | ------------------------------------------------------------------------------- | --------- | ---- |
 | [Nginx Proxy Manager](https://github.com/NginxProxyManager/nginx-proxy-manager) | nginx GUI |      |
 
+```bash
+npm             docker run -d --restart=always --name nginx-proxy-manager  -p 80:80 -p 443:443 -p 81:81 -v npm-data:/data -v npm-letsencrypt:/etc/letsencrypt jc21/nginx-proxy-manager:latest
+
+portainer       docker run -d --restart=always --name portainer -p 8000:8000 -p 9000:9000 -p 9443:9443 -v poartainer-data:/data -v /var/run/docker.sock:/var/run/docker.sock 	portainer/portainer-ce:latest
+
+openai-proxy    docker run -d --restart=always --name openai-proxy -p 5333:5333 -e PROXY_DOMAIN=api.openai.com yqchilde/openai-proxy:latest
+
+remote-chrome   docker run -d --name firefox -p 8083:8083 -p 8083:5900 oldiy/chrome-novnc:latest
+```
 
 ## VS Code 插件
