--- a/source/_posts/2023-02-16 让 ChatGPT 讲故事导致递归.md
+++ b/source/_posts/2023-02-16 让 ChatGPT 讲故事导致递归.md
@@ -1,5 +1,5 @@
 ---
-title: 让 chatgpt 讲故事导致之后对话出现递归
+title: 让 ChatGPT 讲故事导致之后对话出现递归
 date: 2023-02-16 00:00:00
 urlname: use-chatgpt-storytelling-leads-to-gibberish-in-subsequent-conversations
 tags: 
